# aelig-tags

./: .env.template  .gitignore  .rustfmt.toml  Cargo.toml  README.md  canister_ids.json  dfx.json  juno.config.ts  package-lock.json  package.json  setup.sh
.github/: pull_request_template.md
.github/workflows/: deploy.yaml  deploy.yml
.husky/: pre-commit
frontend/: package-lock.json  package.json
frontend/src/components/: NavBar.tsx
frontend/src/pages/Admin/: NewTagModal.tsx
frontend/src/pages/Tag/: Tag.tsx
public/: index.html
src/: App.tsx  Layout.tsx
src/assets/: Cargo.toml
src/assets/src/: lib.rs
src/backend/: Cargo.toml  backend.did
src/backend/src/: admin.rs  auth.rs  certificates.rs  collections.rs  frames.rs  ic_siwe_provider.rs  keys.rs  lib.rs  media.rs  memory_ids.rs  siwe.rs  tags.rs  types.rs  utils.rs  verification.rs
src/components/: NavBar.tsx
src/contexts/: TagsContext.tsx
src/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/frontend/public/: main.css  robots.txt
src/frontend/public/.well-known/: ic-domains
src/frontend/src/: App.tsx  main.css  main.jsx
src/frontend/src/contexts/: AuthClientContext.tsx  BackendActorContext.tsx  TagsContext.tsx
src/frontend/src/providers/: SiweIdentityGuardProvider.tsx  SiweIdentityProvider.tsx  (+1 more)
src/pages/Admin/: Admin.tsx  MetadataModal.tsx
src/pages/Home/: Disconnected.tsx  Loading.tsx  TagsList.tsx
src/pages/NewTag/: NewTag.tsx
src/pages/Tag/: Tag.tsx
src/pages/admin/: Admin.tsx  TopBar.tsx
src/utils/: constants.ts  datastore.ts  types.ts
(+65 files in other folders)
