[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13.1"
serde = { version = "1", features = ["derive"] }
hex = "0.4.3"
aes = "0.8.4"
ic-stable-structures = "0.6.3"
ic-certified-assets = { git = "https://github.com/dfinity/sdk.git" }
serde_bytes = "0.11.14"